# codesage

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  test_api.py
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/models/: __init__.py  schemas.py
backend/routers/: __init__.py  chat.py  explain.py  filetree.py  ingest.py  repos.py
backend/services/: __init__.py  chunker.py  embedder.py  rag_engine.py  repo_loader.py  vector_store.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  CitationChips.jsx  ExplainPanel.jsx  FileTree.jsx  RepoInput.jsx  RepoSwitcher.jsx
frontend/src/styles/: index.css
